--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -1,17 +1,16 @@
-name: C/C++ CI
+name: Build
 
-on:
-  push:
-    branches: [ "master" ]
-  pull_request:
-    branches: [ "master" ]
+on: [ push, workflow_dispatch ]
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
-
     steps:
     - uses: actions/checkout@v3
     - name: make
       run: make
+    - name: store binary
+      uses: actions/upload-artifact@v3
+      with:
+        name: pngtopi1
+        path: pngtopi1
